bugfix horizontal scroll

--- a/WEBSITE/assets/css/main.css
+++ b/WEBSITE/assets/css/main.css
@@ -30,16 +30,7 @@ nav img {
     background-color: white;
 }
 
-/*body {
-  overflow-x: hidden;
-}
-.hidden-thing {
-  position: absolute;
-  left: 100%;
-  width: 50px;
-  height: 50px;
-  opacity: 0;
-}*/
+
 
 a[disabled] {
     pointer-events: none;
@@ -1657,7 +1648,7 @@ a[disabled] {
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size:auto;
-        height: 80%;
+        height: 60%;
         overflow: hidden;
 		z-index: 1;
 	}
@@ -1685,10 +1676,19 @@ a[disabled] {
 		background-position: center;
 		background-repeat: no-repeat;
 		text-align: center;
-    vertical-align: middle;
-   margin-top: 10em;
-        margin-left: 5%;
-        margin-right: 5%;
+vertical-align: middle;
+       
+    
+    max-height: 80%;  
+    max-width: 80%; 
+    width: auto;
+    height: auto;
+    position: absolute;  
+    top: 0;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    margin: auto
 	}
 
 		#banner p {
@@ -1908,7 +1908,7 @@ a[disabled] {
 				}
 
 			footer {
-				margin: 3em 0 0 0;
+				margin: -3em 0 0 0;
 			}
 
 				footer > p {
@@ -1954,7 +1954,7 @@ a[disabled] {
 
 				.box.style1 {
 					padding: 3em 2em 3.5em 2em;
-                    height: 70%;
+                    height: 75%;
 				}
 
 					.box.style1 h3 {
